# aiida-wannier90

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  setup.json  setup.py
.cache/v/test_win_writer/: test_create_win_string
.ci/: install_script.sh
.github/workflows/: ci.yml
.github/workflows_source/: ci.yml
.pytest_cache/v/test_win_writer/: test_create_win_string3
.travis-data/: .gitignore  build_wannier90.sh  check_version.py  configure.py  install_script.sh  make.inc  setup_profiles.sh  test_config.yml  test_script.sh
aiida_wannier90/: __init__.py  _util.py  _version.py  calculations.py  orbitals.py  parsers.py  utils.py
aiida_wannier90/calculations/: wannier90.py
aiida_wannier90/io/: __init__.py  _group_list.py  _write_win.py
aiida_wannier90/parsers/: wannier90.py
aiida_wannier90/workflows/: __init__.py  base.py  minimal.py
doc/source/: conf.py  index.rst  reference.rst
doc/source/reference/: index.rst
docs/: Makefile  requirements_for_rtd.txt
docs/OLD_TO_INCLUDE/: wannier90_tutorial.rst
docs/OLD_TO_INCLUDE/wannier90/: wannier90.rst
docs/source/: conf.py  index.rst  inputexample.rst  parser.rst  reference.rst  tutorial_calculation.rst  tutorial_minimal_workflow.rst  wannier90_tutorial.rst
examples/example01/: README.md  create_local_input_folder.py  wannier_gaas.py
examples/example01/NO_GIT/: README-steps.md  README_2.md  run_pw2wan.py
examples/workflows/: DFT-bands.agr  README.md  launch_w90_minimal.py  run_w90.py
src/aiida_wannier90/: __init__.py  utils.py
src/aiida_wannier90/calculations/: __init__.py  postw90.py  wannier90.py
src/aiida_wannier90/io/: __init__.py  _group_list.py  _write_win.py
src/aiida_wannier90/parsers/: __init__.py  postw90.py  wannier90.py
src/aiida_wannier90/workflows/: __init__.py  minimal.py
tests/: .gitignore  config_example.yml  conftest.py  coverage.sh  gaas_sample.py  test_caching.py  test_local_input.py  test_win_writer.py
tests/calculations/: local_input_oldtest.py  test_example.py  test_local_input.py  test_remote_input.py
tests/calculations/data/gaas/: UNK00006.1
tests/calculations/test_local_input/: test_bands_kpoints.win  test_default_aiida_.win  test_default_plot.win  test_diffusivity.win  test_list_projections.win  test_no_projections.win  test_spin_projections.win
tests/calculations/test_remote_input/: test_unk_symlink.win
tests/io/: test_win_writer.py
tests/io/test_win_writer/: test_create_win_string_generate_projections.win  test_create_win_string_projections_dict.win  test_create_win_string_projections_list_of_dict.win  test_create_win_string_projections_list_of_str.win  test_exclude_bands.win
tests/parsers/: test_parser.py
tests/parsers/data/br2fe/: aiida.win  aiida.wout
tests/parsers/data/ca4mg8/: aiida.win  aiida.wout
tests/parsers/data/gaas/seedname_aiida/: aiida.wout
tests/parsers/data/gaas/seedname_wannier/: wannier.wout
tests/parsers/data/o2sr/band_legacy/: aiida.wout  aiida_band.kpt
tests/parsers/data/o2sr/band_new/: aiida.wout  aiida_band.kpt
tests/parsers/data/output_stdout_incomplete/: aiida.wout
tests/parsers/data/restart/: aiida.wout
tests/parsers/test_parser/: test_band_parser_legacy_.yml  test_band_parser_new_.yml  test_no_kpoint_path.yml  test_restart.yml  test_wannier_default_aiida_.yml  test_wannier_default_wannier_.yml
tests/test_win_writer/: test_create_win_string.win
utils/: check_version.py  interpolate_yaml_anchors.py
